<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/customerConsult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/hint_CustomerConsult"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <EditText
            android:id="@+id/customerNIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_CustomerNIN"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/customerLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_CustomerLastname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/customerBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/hint_CustomerBirthday"
            android:inputType="date"
            android:minHeight="48dp"
            android:visibility="gone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/customerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/hint_CustomerAddress"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/customerCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/hint_CustomerCity"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/customerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/hint_CustomerPhone"
            android:inputType="number"
            android:minHeight="48dp"
            android:visibility="gone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/customerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/hint_CustomerEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:visibility="gone"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/genderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:entries="@array/gender_id"
            android:minHeight="48dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF0000"
                android:onClick="deleteCustomer"
                android:text="@string/delete"
                android:textColor="#FFFFFF"
                android:visibility="gone" />

            <Button
                android:id="@+id/update"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:backgroundTint="#00FF00"
                android:minWidth="48dp"
                android:onClick="updateCustomer"
                android:text="@string/update"
                android:textColor="#000000"
                android:visibility="gone" />

            <Button
                android:id="@+id/search"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:onClick="searchCustomer"
                android:text="@string/search"
                android:visibility="visible"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>